[package]
name = "chimie"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
clap = "4.5.59"
env_logger = "0.11.9"
facet = "0.43.2"
facet-json = "0.43.2"
fjall = "3.0.2"
include_dir = "0.7.4"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
# facet-actix = "0.1.0"
facet-actix = { path = "../facet-actix" }
actix-multipart = "0.7.2"
tempfile = "3.25.0"
