[package]
name = "chimie"
version = "0.1.0"
edition = "2024"

[dependencies]
# actix stuff
actix-files = "0.6.10"
actix-web = "4.13.0"
include_dir = "0.7.4"


# facet stuff
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-actix = { git = "https://github.com/irevoire/facet-actix", branch = "main" }
# facet-actix = { path = "../facet-actix" }
figue = { git = "https://github.com/bearcove/figue", branch = "main" }

# other
env_logger = "0.11.9"
fjall = "3.0.2"
actix-multipart = "0.7.2"
tempfile = "3.25.0"
