[package]
name = "chimie"
version = "0.1.0"
edition = "2024"

[dependencies]
# actix stuff
actix-files = "0.6.10"
actix-web = "4.13.0"
include_dir = "0.7.4"


# facet stuff
facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["jiff02", "uuid"] }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-actix = { git = "https://github.com/irevoire/facet-actix", branch = "main" }
# facet-actix = { path = "../facet-actix" }
facet-error = { git = "https://github.com/facet-rs/facet", branch = "main" }
figue = { git = "https://github.com/bearcove/figue", branch = "main" }

# other
env_logger = "0.11.9"
fjall = "3.0.2"
actix-multipart = "0.7.2"
tempfile = "3.25.0"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v7"] }
jiff = "0.2.21"
